# erp4

./: .gitignore  AGENTS.md  Cargo.toml  README.md  case1.sh  case2.sh  case3.sh  case4.sh  run.sh  seed.sh
_doc/: v0.1.md  v0.2.md  v0.3.md  v0.4.md  v0.5.md  v0.6.md
src/: db.rs  db.sql  main.rs
src/cli/: customer.rs  export.rs  fmt.rs  import.rs  init.rs  invoice.rs  mod.rs  order.rs  product.rs  purchase_order.rs  report.rs  session.rs  supplier.rs  user.rs
src/model/: customer.rs  invoice.rs  mod.rs  order.rs  product.rs  purchase_order.rs  report.rs  session.rs  supplier.rs  user.rs
src/web/: auth.rs  error.rs  mod.rs
src/web/routes/: customer.rs  dashboard.rs  invoice.rs  mod.rs  order.rs  product.rs  purchase_order.rs  report.rs  supplier.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx
web/src/api/: client.ts
web/src/auth/: AuthContext.tsx  LoginPage.tsx
web/src/components/: ConfirmDialog.tsx  Layout.tsx  Pagination.tsx  ProtectedRoute.tsx  StatusBadge.tsx  Table.tsx
web/src/pages/: AgingReport.tsx  CustomerForm.tsx  CustomerList.tsx  Dashboard.tsx  InventoryReport.tsx  InvoiceForm.tsx  InvoiceList.tsx  OrderDetail.tsx  OrderList.tsx  ProductForm.tsx  ProductList.tsx  PurchaseOrderDetail.tsx  PurchaseOrderList.tsx  SalesReport.tsx  SupplierForm.tsx  SupplierList.tsx
web/src/types/: index.ts
